--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,27 @@
 <resources>
-    <string name="app_name">Ksuonlinenew</string>
-    <string name="btnlog">Button</string>
-    <string name="btnsign">Button</string>
+    <string name="app_name">Ksuonline</string>
+    <string name="btnlog">Login</string>
+    <string name="btnsign">Signin</string>
+    <string name="login">Login</string>
+    <string name="password">Password</string>
+    <string name="email">Email</string>
+    <string name="no_account_yet_create_one">No account yet? Create one</string>
+    <string name="have_account_sign_in">Have account? sign in</string>
+    <string name="no_users_found">No users found!</string>
+    <string name="register">Register</string>
+    <string name="input_error_name">name required</string>
+    <string name="input_error_email">email required</string>
+    <string name="input_error_password">password required</string>
+    <string name="input_error_phone">phone required</string>
+    <string name="input_error_password_length">password should be atleast 6 characters long</string>
+    <string name="input_error_phone_invalid">enter a valid phone number</string>
+    <string name="registration_success">Registered Successfully</string>
+    <string name="input_error_email_invalid">enter a valid email</string>
+    <string name="job">job</string>
+    <string name="full_name">full name</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="e_mail">E-mail</string>
 
 </resources>
